force-app/main/default/objects/Account/fields/Merge_Requested__c.field-meta.xml
<CustomField>
    <fullName>Merge_Requested__c</fullName>
    <label>Merge Requested</label>
    <description>Indicates that an employee has reviewed this Account and submitted a merge request to the admin queue. Set to true by the Duplicate Flagging Agent when a merge request is submitted.</description>
    <inlineHelpText>Checked when a merge request has been submitted for this Account. Admins should review and process the merge before clearing this flag.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>