force-app/main/default/objects/Account/fields/Potential_Duplicate_Id__c.field-meta.xml
<CustomField>
    <fullName>Potential_Duplicate_Id__c</fullName>
    <label>Potential Duplicate ID</label>
    <description>Stores the Salesforce ID of a suspected duplicate Account record. Set by the Data Quality Agent when an employee flags a potential duplicate pair for admin review.</description>
    <inlineHelpText>The 18-character Salesforce record ID of the Account suspected to be a duplicate of this one. Populated by the Duplicate Flagging Agent — do not edit manually.</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>